# edu-assistant

./: .env  README.md  config.yml  main.py  pyproject.toml  Создание конфигурации миссия1.docx
prompts/context/: formula_solution.jinja
prompts/roles/: history_tutor.jinja  math_tutor.jinja
prompts/templates/: tutor_full_answer.jinja  tutor_quick_answer.jinja
src/edu_assistant/: api.py  assistant.py  config.py  llm_client.py  prompts.py
src/edu_assistant/tools/: formula.py
templates/: demo.html
